--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-transmissionbt (0.5.9) stable; urgency=low
+
+  * Fix require in Javascript files
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 04 Oct 2013 17:34:54 +0200
+
 openmediavault-transmissionbt (0.5.8) stable; urgency=low
 
   * stop reloading the grid when changing tab
