--- a/usr/share/openmediavault/locale/de_DE/openmediavault-transmissionbt.po
+++ b/usr/share/openmediavault/locale/de_DE/openmediavault-transmissionbt.po
@@ -1,5 +1,5 @@
-# openmediavault-transmissionbt
-# Copyright (C) 2013
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-transmissionbt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-28 09:21-0500\n"
-"PO-Revision-Date: 2013-10-29 01:04+0000\n"
-"Last-Translator: davidh2k <davidh1990@gmx.de>\n"
+"POT-Creation-Date: 2013-11-14 11:49-0600\n"
+"PO-Revision-Date: 2013-11-14 17:50+0000\n"
+"Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault-transmissionbt/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,14 +18,14 @@ msgstr ""
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-msgid "Adding Torrent ..."
-msgstr "Torrent hinzfügen ..."
-
 msgid "Add Torrent by URL"
 msgstr "Torrent durch URL hinzufügen"
 
 msgid "Add URL"
 msgstr "URL hinzufügen"
+
+msgid "Adding Torrent ..."
+msgstr "Torrent hinzfügen ..."
 
 msgid "Authentication"
 msgstr "Authentifizierung"
@@ -57,8 +57,14 @@ msgstr "Cachegröße (in Megabyte) um die Anzahl der Festplattenzugriffe zu verr
 msgid "Checking files"
 msgstr "Dateien prüfen"
 
+msgid "DL-rate"
+msgstr "Downloadrate"
+
 msgid "Daily"
 msgstr "Täglich"
+
+msgid "Date & Time"
+msgstr "Datum & Zeit"
 
 msgid "Date added"
 msgstr "Datum hinzugefügt"
@@ -66,17 +72,11 @@ msgstr "Datum hinzugefügt"
 msgid "Date done"
 msgstr "Datum erledigt"
 
-msgid "Date & Time"
-msgstr "Datum & Zeit"
-
 msgid "Days"
 msgstr "Tage"
 
 msgid "Debug"
 msgstr "Debug"
-
-msgid "default"
-msgstr "Standard"
 
 msgid "Delete"
 msgstr "Entfernen"
@@ -110,26 +110,41 @@ msgstr "Verzeichnis in welchem die Dateien gespeichert werden bis der Torrent ko
 msgid "Distributed hash table (DHT)."
 msgstr "Distributed hash table (DHT)."
 
-msgid "DL-rate"
-msgstr "Downloadrate"
-
 msgid "Done"
 msgstr "Fertig"
 
 msgid "Download"
 msgstr "Download"
 
+msgid "Download Queue"
+msgstr "Download Warteschlange"
+
 msgid "Downloading"
 msgstr "Downloading"
 
-msgid "Download Queue"
-msgstr "Download Warteschlange"
+msgid "ETA"
+msgstr "ETA"
 
 msgid "Enable"
 msgstr "Aktivieren"
 
+msgid "Enable &micro;TP."
+msgstr "&micro;TP aktivieren."
+
 msgid "Enable DHT."
 msgstr "DHT aktivieren."
+
+msgid "Enable LPD."
+msgstr "LPD aktivieren."
+
+msgid "Enable PEX."
+msgstr "PEX aktivieren."
+
+msgid "Enable Turtle Mode."
+msgstr "Turtle Mode aktivieren."
+
+msgid "Enable Watch directory."
+msgstr "Überwachungsverzeichnis aktivieren."
 
 msgid "Enable download limit."
 msgstr "Download Begrenzung aktivieren."
@@ -137,29 +152,14 @@ msgstr "Download Begrenzung aktivieren."
 msgid "Enable incomplete directory."
 msgstr "Unvollständig Verzeichnis aktivieren."
 
-msgid "Enable LPD."
-msgstr "LPD aktivieren."
-
-msgid "Enable &micro;TP."
-msgstr "&micro;TP aktivieren."
-
 msgid "Enable paused torrent scraping."
 msgstr "Pausiertes Torrent scraping aktivieren."
-
-msgid "Enable PEX."
-msgstr "PEX aktivieren."
 
 msgid "Enable port forwarding via NAT-PMP or UPnP."
 msgstr "Port Weiterleitung via NAT-PMP oder UPnP aktivieren."
 
-msgid "Enable Turtle Mode."
-msgstr "Turtle Mode aktivieren."
-
 msgid "Enable upload limit."
 msgstr "Uploadlimit aktivieren."
-
-msgid "Enable Watch directory."
-msgstr "Überwachungsverzeichnis aktivieren."
 
 msgid "Encryption"
 msgstr "Verschlüsselung"
@@ -172,9 +172,6 @@ msgstr "Pfad zum Script eingeben."
 
 msgid "Error"
 msgstr "Fehler"
-
-msgid "ETA"
-msgstr "ETA"
 
 msgid "Event"
 msgstr "Ereignis"
@@ -212,6 +209,18 @@ msgstr "Stündlich"
 msgid "ID"
 msgstr "ID"
 
+msgid "IPv4"
+msgstr "IPv4"
+
+msgid "IPv4 address to listen on. Use 0.0.0.0 for all host IPs."
+msgstr "IPv4 Adresse auf der gelauscht wird. Benutze 0.0.0.0 für alle Host IPs."
+
+msgid "IPv6"
+msgstr "IPv6"
+
+msgid "IPv6 address to listen on. Use :: for all host IPs."
+msgstr "IPv6 Adresse auf der gelauscht wird. Benutze :: für alle Host IPs."
+
 msgid "Idle"
 msgstr "Leerlauf"
 
@@ -230,18 +239,6 @@ msgstr "Info"
 msgid "Invalid Uri."
 msgstr "Ungültige URL."
 
-msgid "IPv4"
-msgstr "IPv4"
-
-msgid "IPv4 address to listen on. Use 0.0.0.0 for all host IPs."
-msgstr "IPv4 Adresse auf der gelauscht wird. Benutze 0.0.0.0 für alle Host IPs."
-
-msgid "IPv6"
-msgstr "IPv6"
-
-msgid "IPv6 address to listen on. Use :: for all host IPs."
-msgstr "IPv6 Adresse auf der gelauscht wird. Benutze :: für alle Host IPs."
-
 msgid "Jobs"
 msgstr "Aufträge"
 
@@ -251,29 +248,23 @@ msgstr "Lazy Bitfield"
 msgid "Limit Download"
 msgstr "Download begrenzen"
 
-msgid "Limit download speed. Value is kb/s."
-msgstr "Downloadgeschwindigkeit begrenzen. Wert ist kb/s."
-
-msgid "Limits"
-msgstr "Begrenzungen"
-
 msgid "Limit Upload"
 msgstr "Upload begrenzen"
 
+msgid "Limit download speed. Value is kb/s."
+msgstr "Downloadgeschwindigkeit begrenzen. Wert ist kb/s."
+
 msgid "Limit upload speed. Value is kb/s."
 msgstr "Uploadgeschwindigkeit begrenzen. Wert ist kb/s."
+
+msgid "Limits"
+msgstr "Begrenzungen"
 
 msgid "Local Peer Discovery (LPD)."
 msgstr "Local Peer Discovery (LPD)."
 
 msgid "Locations"
 msgstr "Orte"
-
-msgid "lowcost"
-msgstr ""
-
-msgid "lowdelay"
-msgstr ""
 
 msgid ""
 "Make sure the group 'debian-transmission' has read/write access to the "
@@ -289,8 +280,8 @@ msgstr "Nachrichtenstufe"
 msgid "Micro Transport Protocol (&micro;TP)."
 msgstr "Micro Transport Protocol (&micro;TP)."
 
-msgid "Missing Status:"
-msgstr "Fehlender Status:"
+msgid "Missing Status: "
+msgstr ""
 
 msgid "Mode for preallocating files."
 msgstr "Modus um Dateien vorzubelegen."
@@ -310,11 +301,11 @@ msgstr "Keiner | Keine | Keines"
 msgid "Not available"
 msgstr "Nicht verfügbar"
 
-msgid "Off"
-msgstr "Aus"
-
 msgid "OK"
 msgstr "OK"
+
+msgid "Off"
+msgstr "Aus"
 
 msgid "Password"
 msgstr "Passwort"
@@ -328,14 +319,14 @@ msgstr "Pausiere ausgewählte Elemente"
 msgid "Peer"
 msgstr "Peer"
 
+msgid "Peer Ports"
+msgstr "Peer Ports"
+
 msgid "Peer exchange (PEX)"
 msgstr "Peer exchange (PEX)"
 
 msgid "Peer port"
 msgstr "Peer Port"
-
-msgid "Peer Ports"
-msgstr "Peer Ports"
 
 msgid "Peers"
 msgstr "Peers"
@@ -370,15 +361,6 @@ msgstr "Bevorzugt"
 msgid "Queue"
 msgstr "Warteschlange"
 
-msgid "Queued to check files"
-msgstr "Eingereit zum Überprüfen der Dateien"
-
-msgid "Queued to download"
-msgstr "Eingereit zum herunterladen"
-
-msgid "Queued to seed"
-msgstr "Eingereiht zum seeden"
-
 msgid "Queue Move Bottom"
 msgstr "Bewege zum Ende der Warteschlange "
 
@@ -391,20 +373,26 @@ msgstr "Bewege zum Anfang der Warteschlange"
 msgid "Queue Move Up"
 msgstr "Bewege nach oben in der Warteschlange"
 
+msgid "Queue Stalled"
+msgstr "Warteschlange angehalten"
+
 msgid "Queue moving selcted item(s)"
 msgstr "Bewegte die ausgewählten Elemente in der Warteschlange"
 
-msgid "Queue Stalled"
-msgstr "Warteschlange angehalten"
+msgid "Queued to check files"
+msgstr "Eingereit zum Überprüfen der Dateien"
+
+msgid "Queued to download"
+msgstr "Eingereit zum herunterladen"
+
+msgid "Queued to seed"
+msgstr "Eingereiht zum seeden"
 
 msgid "Queuing"
 msgstr "Einreihen"
 
-msgid "Random high"
-msgstr "Zufällig hoch"
-
-msgid "Random low"
-msgstr "Zufällig niedrig"
+msgid "RPC/WebUI Settings"
+msgstr "RPC/WebUI Einstellungen"
 
 msgid "Random Port"
 msgstr "Zufälliger Port"
@@ -412,14 +400,17 @@ msgstr "Zufälliger Port"
 msgid "Random Port on start."
 msgstr "Zufälliger Port beim Start."
 
+msgid "Random high"
+msgstr "Zufällig hoch"
+
+msgid "Random low"
+msgstr "Zufällig niedrig"
+
 msgid "Ratio"
 msgstr "Verhältnis"
 
 msgid "Ratio Limit"
 msgstr "Verhältnis Limit"
-
-msgid "reliability"
-msgstr "Ausfallsicherheit"
 
 msgid "Reload"
 msgstr "Aktualisieren"
@@ -432,9 +423,6 @@ msgstr "Fortsetzen"
 
 msgid "Resuming selected item(s)"
 msgstr "Setze die ausgewählten Objekte fort."
-
-msgid "RPC/WebUI Settings"
-msgstr "RPC/WebUI Einstellungen"
 
 msgid "Run a script at torrent completion."
 msgstr "Führe ein Skript aus wenn ein Torrent fertig gestellt wurde."
@@ -457,26 +445,26 @@ msgstr "Führe ein Skript aus wenn ein Torrent fertig gestellt wurde."
 msgid "Seed"
 msgstr "Seed"
 
+msgid "Seed Queue"
+msgstr "Seed Warteschlange"
+
 msgid "Seeding"
 msgstr "Seeding"
 
 msgid "Seeding Limit"
 msgstr "Seeding Limit"
 
-msgid "Seed Queue"
-msgstr "Seed Warteschlange"
-
 msgid "Server"
 msgstr "Server"
+
+msgid "Set verbosity of transmission messages."
+msgstr "Setze die die Stufe der Transmission Mitteilungen."
 
 msgid "Sets transmission's file mode creation mask."
 msgstr "Setze Transmission's Dateierstellungsmaske (creation mask)."
 
 msgid "Settings"
 msgstr "Einstellungen"
-
-msgid "Set verbosity of transmission messages."
-msgstr "Setze die die Stufe der Transmission Mitteilungen."
 
 msgid "Shared folder"
 msgstr "Freigegebener Ordner"
@@ -493,11 +481,11 @@ msgstr "Geschwindigkeit"
 msgid "Stalled Minutes"
 msgstr ""
 
-msgid "Start download"
-msgstr "Starte Download"
-
 msgid "Start Torrents"
 msgstr "Starte Torrents"
+
+msgid "Start download"
+msgstr "Starte Download"
 
 msgid "Start torrents as soon as they are added."
 msgstr "Starte Torrents sobald sie hinzugefügt wurden."
@@ -514,14 +502,11 @@ msgstr "Sonntag"
 msgid "Sync frequency"
 msgstr "Sync Frequenz"
 
-msgid "The peer connection encryption mode."
-msgstr "Die Peer Verbindung Verschlüsselungsmodus."
-
 msgid "The URL of the blocklist."
 msgstr "Die URL der Blockliste."
 
-msgid "throughput"
-msgstr "Durchsatz"
+msgid "The peer connection encryption mode."
+msgstr "Die Peer Verbindung Verschlüsselungsmodus."
 
 msgid "Thursday"
 msgstr "Donnerstag"
@@ -568,6 +553,9 @@ msgstr "Turtle Modus uploadgeschwindigkeit. Wert ist in kb/s."
 msgid "UL-rate"
 msgstr "Uploadrate"
 
+msgid "URL"
+msgstr "URL"
+
 msgid "Umask"
 msgstr ""
 
@@ -588,9 +576,6 @@ msgstr "Upload Torrent"
 
 msgid "Uri"
 msgstr "Uri"
-
-msgid "URL"
-msgstr "URL"
 
 msgid "Url to access RPC (http://localhost/&lt;URI&gt;/(rpc|web)."
 msgstr "URL zum Zugriff auf RPC  (http://localhost/&lt;URI&gt;/(rpc|web)."
@@ -618,3 +603,18 @@ msgstr "Wöchentlich"
 
 msgid "When enabled, this will toggle the Turtle Mode."
 msgstr "Wenn aktiviert, wird dies den Turtle Modus umschalten."
+
+msgid "default"
+msgstr "Standard"
+
+msgid "lowcost"
+msgstr ""
+
+msgid "lowdelay"
+msgstr ""
+
+msgid "reliability"
+msgstr "Ausfallsicherheit"
+
+msgid "throughput"
+msgstr "Durchsatz"
