--- a/usr/share/openmediavault/locale/en_US/openmediavault-transmissionbt.po
+++ b/usr/share/openmediavault/locale/en_US/openmediavault-transmissionbt.po
@@ -3,7 +3,6 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-transmissionbt\n"
@@ -11,200 +10,200 @@ msgstr ""
 "POT-Creation-Date: 2013-11-14 11:49-0600\n"
 "PO-Revision-Date: 2013-11-14 17:50+0000\n"
 "Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
-"Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault-transmissionbt/language/pl_PL/)\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pl_PL\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: en_US\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add Torrent by URL"
-msgstr "Dodaj link do torrenta "
+msgstr "Add Torrent by URL"
 
 msgid "Add URL"
-msgstr "Dodaj link"
+msgstr "Add URL"
 
 msgid "Adding Torrent ..."
-msgstr "Dodaję torrenta ..."
+msgstr "Adding Torrent ..."
 
 msgid "Authentication"
-msgstr "Uwierzytelnianie"
+msgstr "Authentication"
 
 msgid "Auto sync"
-msgstr "Automatyczne synchronizowanie"
+msgstr "Auto sync"
 
 msgid "Bandwidth"
-msgstr ""
+msgstr "Bandwidth"
 
 msgid "Begin"
-msgstr "Początek"
+msgstr "Begin"
 
 msgid "Bindings"
-msgstr ""
+msgstr "Bindings"
 
 msgid "BitTorrent"
 msgstr "BitTorrent"
 
 msgid "Blocklists"
-msgstr "Lista blokowanych"
+msgstr "Blocklists"
 
 msgid "Cache Size"
-msgstr "Rozmiar pamięci podręcznej"
+msgstr "Cache Size"
 
 msgid "Cache size (in Mb) to reduce the number of disk reads and writes."
-msgstr ""
+msgstr "Cache size (in Mb) to reduce the number of disk reads and writes."
 
 msgid "Checking files"
-msgstr "Sprawdź pliki"
+msgstr "Checking files"
 
 msgid "DL-rate"
-msgstr ""
+msgstr "DL-rate"
 
 msgid "Daily"
-msgstr "Dzienne"
+msgstr "Daily"
 
 msgid "Date & Time"
-msgstr "Data i czas"
+msgstr "Date & Time"
 
 msgid "Date added"
-msgstr "Data dodania"
+msgstr "Date added"
 
 msgid "Date done"
-msgstr "Data zakończenia"
+msgstr "Date done"
 
 msgid "Days"
-msgstr "Dni"
+msgstr "Days"
 
 msgid "Debug"
-msgstr ""
+msgstr "Debug"
 
 msgid "Delete"
-msgstr "Usuń"
+msgstr "Delete"
 
 msgid "Delete Local Data"
-msgstr "Usuń lokalne dane"
+msgstr "Delete Local Data"
 
 msgid "Delete torrent"
-msgstr "Usuń torrenta"
+msgstr "Delete torrent"
 
 msgid "Delete torrents added from the watch directory."
-msgstr ""
+msgstr "Delete torrents added from the watch directory."
 
 msgid "Deleting selected item(s)"
-msgstr "Usuń zaznaczone"
+msgstr "Deleting selected item(s)"
 
 msgid "Deleting torrent ..."
-msgstr "Usuwanie torrenta ..."
+msgstr "Deleting torrent ..."
 
 msgid "Directory"
-msgstr ""
+msgstr "Directory"
 
 msgid ""
 "Directory to keep downloads. If incomplete is enabled, only complete "
 "downloads will be stored here."
-msgstr ""
+msgstr "Directory to keep downloads. If incomplete is enabled, only complete downloads will be stored here."
 
 msgid "Directory to keep files in until torrent is complete."
-msgstr ""
+msgstr "Directory to keep files in until torrent is complete."
 
 msgid "Distributed hash table (DHT)."
-msgstr ""
+msgstr "Distributed hash table (DHT)."
 
 msgid "Done"
-msgstr "Udane"
+msgstr "Done"
 
 msgid "Download"
-msgstr "Pobierz"
+msgstr "Download"
 
 msgid "Download Queue"
-msgstr "Kolejaka pobierania"
+msgstr "Download Queue"
 
 msgid "Downloading"
-msgstr "Pobieranie"
+msgstr "Downloading"
 
 msgid "ETA"
 msgstr "ETA"
 
 msgid "Enable"
-msgstr "Właczone"
+msgstr "Enable"
 
 msgid "Enable &micro;TP."
-msgstr ""
+msgstr "Enable &micro;TP."
 
 msgid "Enable DHT."
-msgstr "Włącz DHT"
+msgstr "Enable DHT."
 
 msgid "Enable LPD."
-msgstr "Włącz LPD."
+msgstr "Enable LPD."
 
 msgid "Enable PEX."
-msgstr "Włącz PEX."
+msgstr "Enable PEX."
 
 msgid "Enable Turtle Mode."
-msgstr "Włącz alternatywne ograniczenie."
+msgstr "Enable Turtle Mode."
 
 msgid "Enable Watch directory."
-msgstr "Włącz obserwowany katalog."
+msgstr "Enable Watch directory."
 
 msgid "Enable download limit."
-msgstr "Włącz limit pobierania."
+msgstr "Enable download limit."
 
 msgid "Enable incomplete directory."
-msgstr "Włącz katalog tymczasowy."
+msgstr "Enable incomplete directory."
 
 msgid "Enable paused torrent scraping."
-msgstr ""
+msgstr "Enable paused torrent scraping."
 
 msgid "Enable port forwarding via NAT-PMP or UPnP."
-msgstr ""
+msgstr "Enable port forwarding via NAT-PMP or UPnP."
 
 msgid "Enable upload limit."
-msgstr "Włącz limit wysyłania."
+msgstr "Enable upload limit."
 
 msgid "Encryption"
-msgstr "Szyfrowanie"
+msgstr "Encryption"
 
 msgid "End"
-msgstr "Koniec"
+msgstr "End"
 
 msgid "Enter path to script."
-msgstr "Podaj ścieżkę do skryptu."
+msgstr "Enter path to script."
 
 msgid "Error"
-msgstr "Błąd"
+msgstr "Error"
 
 msgid "Event"
-msgstr "Zdarzenie"
+msgstr "Event"
 
 msgid "Fast"
-msgstr "Szybko"
+msgstr "Fast"
 
 msgid "Files"
-msgstr "Pliki"
+msgstr "Files"
 
 msgid "Files and locations"
-msgstr "Pliki i lokalizacje"
+msgstr "Files and locations"
 
 msgid "Forced"
-msgstr "Wymuszony"
+msgstr "Forced"
 
 msgid "Friday"
-msgstr "Piątek"
+msgstr "Friday"
 
 msgid "Full"
-msgstr "Pełny"
+msgstr "Full"
 
 msgid "General"
-msgstr "Główny"
+msgstr "General"
 
 msgid "General settings"
-msgstr "Główne ustawienia"
+msgstr "General settings"
 
 msgid "Global"
-msgstr "Globalny"
+msgstr "Global"
 
 msgid "Hourly"
-msgstr "Godzinny"
+msgstr "Hourly"
 
 msgid "ID"
 msgstr "ID"
@@ -213,408 +212,408 @@ msgid "IPv4"
 msgstr "IPv4"
 
 msgid "IPv4 address to listen on. Use 0.0.0.0 for all host IPs."
-msgstr "Adres IPv4 do nasłuchiwania. Dla wszystkich hostów IP, należy użyć 0.0.0.0."
+msgstr "IPv4 address to listen on. Use 0.0.0.0 for all host IPs."
 
 msgid "IPv6"
 msgstr "IPv6"
 
 msgid "IPv6 address to listen on. Use :: for all host IPs."
-msgstr "Adres IPv6 do nasłuchiwania. Dla wszystkich hostów IP, należy użyć ::"
+msgstr "IPv6 address to listen on. Use :: for all host IPs."
 
 msgid "Idle"
-msgstr "w spoczynku"
+msgstr "Idle"
 
 msgid "Idle Minutes"
-msgstr "Minut w spoczynku"
+msgstr "Idle Minutes"
 
 msgid "Incomplete"
-msgstr "Niekompletny"
+msgstr "Incomplete"
 
 msgid "Infinite"
-msgstr ""
+msgstr "Infinite"
 
 msgid "Info"
 msgstr "Info"
 
 msgid "Invalid Uri."
-msgstr ""
+msgstr "Invalid Uri."
 
 msgid "Jobs"
-msgstr "Zadania"
+msgstr "Jobs"
 
 msgid "Lazy Bitfield"
-msgstr ""
+msgstr "Lazy Bitfield"
 
 msgid "Limit Download"
-msgstr "Limit pobierania"
+msgstr "Limit Download"
 
 msgid "Limit Upload"
-msgstr "Limit wczytywania"
+msgstr "Limit Upload"
 
 msgid "Limit download speed. Value is kb/s."
-msgstr "Limit szybkości pobierania.Wartość w kb/s."
+msgstr "Limit download speed. Value is kb/s."
 
 msgid "Limit upload speed. Value is kb/s."
-msgstr "Limit szybkości wysyłania.Wartość w kb/s."
+msgstr "Limit upload speed. Value is kb/s."
 
 msgid "Limits"
-msgstr "Limity"
+msgstr "Limits"
 
 msgid "Local Peer Discovery (LPD)."
-msgstr "Wyszukaj lokalnych Peerów (LPD)."
+msgstr "Local Peer Discovery (LPD)."
 
 msgid "Locations"
-msgstr "Lokalizacje"
+msgstr "Locations"
 
 msgid ""
 "Make sure the group 'debian-transmission' has read/write access to the "
 "shared folder."
-msgstr "Upewnij się że grupa 'debian-transmission' ma uprawnienia do czytania/zapisu udostępnionego katalogu."
+msgstr "Make sure the group 'debian-transmission' has read/write access to the shared folder."
 
 msgid "May help get around some ISP filtering."
-msgstr ""
+msgstr "May help get around some ISP filtering."
 
 msgid "Message Level"
-msgstr "Poziom wiaomości"
+msgstr "Message Level"
 
 msgid "Micro Transport Protocol (&micro;TP)."
-msgstr ""
+msgstr "Micro Transport Protocol (&micro;TP)."
 
 msgid "Missing Status: "
-msgstr ""
+msgstr "Missing Status: "
 
 msgid "Mode for preallocating files."
-msgstr ""
+msgstr "Mode for preallocating files."
 
 msgid "Monday"
-msgstr "Poniedziałek"
+msgstr "Monday"
 
 msgid "Monthly"
-msgstr "Miesięczniy"
+msgstr "Monthly"
 
 msgid "Name"
-msgstr "Nazwa"
+msgstr "Name"
 
 msgid "None"
-msgstr "Brak"
+msgstr "None"
 
 msgid "Not available"
-msgstr "Nie dostępny"
+msgstr "Not available"
 
 msgid "OK"
 msgstr "OK"
 
 msgid "Off"
-msgstr "Wyłącz"
+msgstr "Off"
 
 msgid "Password"
-msgstr "Hasło"
+msgstr "Password"
 
 msgid "Pause"
-msgstr "Pauza"
+msgstr "Pause"
 
 msgid "Pausing selected item(s)"
-msgstr "Pauzuj zaznaczony(e)"
+msgstr "Pausing selected item(s)"
 
 msgid "Peer"
 msgstr "Peer"
 
 msgid "Peer Ports"
-msgstr "Porty Peer-ów"
+msgstr "Peer Ports"
 
 msgid "Peer exchange (PEX)"
-msgstr ""
+msgstr "Peer exchange (PEX)"
 
 msgid "Peer port"
-msgstr "Port Peer'a"
+msgstr "Peer port"
 
 msgid "Peers"
-msgstr "Peer'y"
+msgstr "Peers"
 
 msgid "Per torrent"
-msgstr "Za torrent"
+msgstr "Per torrent"
 
 msgid "Port"
 msgstr "Port"
 
 msgid "Port forwarding"
-msgstr "Przekierowanie portu"
+msgstr "Port forwarding"
 
 msgid "Port to listen for incoming peer connections."
-msgstr ""
+msgstr "Port to listen for incoming peer connections."
 
 msgid "Port to open and listen for RPC/Web requests on."
-msgstr ""
+msgstr "Port to open and listen for RPC/Web requests on."
 
 msgid "Postfix"
 msgstr "Postfix"
 
 msgid "Postfix partially downloaded files with .part."
-msgstr ""
+msgstr "Postfix partially downloaded files with .part."
 
 msgid "Preallocation"
-msgstr ""
+msgstr "Preallocation"
 
 msgid "Preferred"
-msgstr "Preferowane"
+msgstr "Preferred"
 
 msgid "Queue"
-msgstr "Kolejka"
+msgstr "Queue"
 
 msgid "Queue Move Bottom"
-msgstr ""
+msgstr "Queue Move Bottom"
 
 msgid "Queue Move Down"
-msgstr ""
+msgstr "Queue Move Down"
 
 msgid "Queue Move Top"
-msgstr ""
+msgstr "Queue Move Top"
 
 msgid "Queue Move Up"
-msgstr ""
+msgstr "Queue Move Up"
 
 msgid "Queue Stalled"
-msgstr ""
+msgstr "Queue Stalled"
 
 msgid "Queue moving selcted item(s)"
-msgstr ""
+msgstr "Queue moving selcted item(s)"
 
 msgid "Queued to check files"
-msgstr "Kolejkuj do sprawdzenia plików"
+msgstr "Queued to check files"
 
 msgid "Queued to download"
-msgstr "Kolejkuj do pobrania"
+msgstr "Queued to download"
 
 msgid "Queued to seed"
-msgstr ""
+msgstr "Queued to seed"
 
 msgid "Queuing"
-msgstr ""
+msgstr "Queuing"
 
 msgid "RPC/WebUI Settings"
-msgstr "Ustawienia RPC/WebUI"
+msgstr "RPC/WebUI Settings"
 
 msgid "Random Port"
-msgstr ""
+msgstr "Random Port"
 
 msgid "Random Port on start."
-msgstr ""
+msgstr "Random Port on start."
 
 msgid "Random high"
-msgstr ""
+msgstr "Random high"
 
 msgid "Random low"
-msgstr ""
+msgstr "Random low"
 
 msgid "Ratio"
-msgstr "Udział"
+msgstr "Ratio"
 
 msgid "Ratio Limit"
-msgstr "Limit udziału"
+msgstr "Ratio Limit"
 
 msgid "Reload"
-msgstr "Przeładuj"
+msgstr "Reload"
 
 msgid "Require clients to authenticate themselves."
-msgstr ""
+msgstr "Require clients to authenticate themselves."
 
 msgid "Resume"
-msgstr "Ponów"
+msgstr "Resume"
 
 msgid "Resuming selected item(s)"
-msgstr "Ponawianie zaznaczonych(ego)"
+msgstr "Resuming selected item(s)"
 
 msgid "Run a script at torrent completion."
-msgstr "Uruchom skrypt po zakończeniu torrenta."
+msgstr "Run a script at torrent completion."
 
 msgid "Saturday"
-msgstr "Sobota"
+msgstr "Saturday"
 
 msgid "Scheduling"
-msgstr "Planowanie"
+msgstr "Scheduling"
 
 msgid "Scrape paused torrents."
-msgstr ""
+msgstr "Scrape paused torrents."
 
 msgid "Script"
-msgstr "Skrypt"
+msgstr "Script"
 
 msgid "Script to Proccess After Torrent Finishes"
-msgstr "Skrypt do wykonania po pobraniu torrentów"
+msgstr "Script to Proccess After Torrent Finishes"
 
 msgid "Seed"
 msgstr "Seed"
 
 msgid "Seed Queue"
-msgstr "Kolejka seed"
+msgstr "Seed Queue"
 
 msgid "Seeding"
-msgstr "Seeduję"
+msgstr "Seeding"
 
 msgid "Seeding Limit"
-msgstr "Limit Seedowania"
+msgstr "Seeding Limit"
 
 msgid "Server"
-msgstr "Serwer"
+msgstr "Server"
 
 msgid "Set verbosity of transmission messages."
-msgstr ""
+msgstr "Set verbosity of transmission messages."
 
 msgid "Sets transmission's file mode creation mask."
-msgstr ""
+msgstr "Sets transmission's file mode creation mask."
 
 msgid "Settings"
-msgstr "Ustawienia"
+msgstr "Settings"
 
 msgid "Shared folder"
-msgstr "Udostępniony katalog"
+msgstr "Shared folder"
 
 msgid "Size"
-msgstr "Rozmiar"
+msgstr "Size"
 
 msgid "Socket TOS"
-msgstr ""
+msgstr "Socket TOS"
 
 msgid "Speed"
-msgstr "Prędkość"
+msgstr "Speed"
 
 msgid "Stalled Minutes"
-msgstr ""
+msgstr "Stalled Minutes"
 
 msgid "Start Torrents"
-msgstr "Uruchom torrenty"
+msgstr "Start Torrents"
 
 msgid "Start download"
-msgstr "Rozpocznij pobieranie"
+msgstr "Start download"
 
 msgid "Start torrents as soon as they are added."
-msgstr "Rozpocznij pobieranie torrentów zaraz po dodaniu."
+msgstr "Start torrents as soon as they are added."
 
 msgid "Status"
 msgstr "Status"
 
 msgid "Stop seeding after being idle for N minutes."
-msgstr "Zatrzymaj pobieranie torrentów zaraz po N minutach bezczynności."
+msgstr "Stop seeding after being idle for N minutes."
 
 msgid "Sunday"
-msgstr "Niedziela"
+msgstr "Sunday"
 
 msgid "Sync frequency"
-msgstr "Częstotliwość synchronizacji"
+msgstr "Sync frequency"
 
 msgid "The URL of the blocklist."
-msgstr "Adres z listy blokowanych"
+msgstr "The URL of the blocklist."
 
 msgid "The peer connection encryption mode."
-msgstr ""
+msgstr "The peer connection encryption mode."
 
 msgid "Thursday"
-msgstr "Czwartek"
+msgstr "Thursday"
 
 msgid "Time"
-msgstr "Czas"
+msgstr "Time"
 
 msgid "Torrent is stopped"
-msgstr "Torrent jest zatrzymany"
+msgstr "Torrent is stopped"
 
 msgid ""
 "Torrents that have not shared data for queue-stalled-minutes are treated as "
 "'stalled' and are not counted against the queue-download-size and seed-"
 "queue-size limits."
-msgstr ""
+msgstr "Torrents that have not shared data for queue-stalled-minutes are treated as 'stalled' and are not counted against the queue-download-size and seed-queue-size limits."
 
 msgid ""
 "Transmission will only download download-queue-size non-stalled torrents at "
 "once."
-msgstr ""
+msgstr "Transmission will only download download-queue-size non-stalled torrents at once."
 
 msgid ""
 "Transmission will only seed seed-queue-size non-stalled torrents at once."
-msgstr ""
+msgstr "Transmission will only seed seed-queue-size non-stalled torrents at once."
 
 msgid "Transmission will only seed until ratio limit is reached."
-msgstr ""
+msgstr "Transmission will only seed until ratio limit is reached."
 
 msgid "Trash original"
-msgstr ""
+msgstr "Trash original"
 
 msgid "Tuesday"
-msgstr "Wtorek"
+msgstr "Tuesday"
 
 msgid "Turtle Mode"
-msgstr "Alternatywne ograniczenie prędkości"
+msgstr "Turtle Mode"
 
 msgid "Turtle Mode download speed. Value is kb/s."
-msgstr "Alternatywne ograniczenie szybkości pobierania. Wartość w kb/s."
+msgstr "Turtle Mode download speed. Value is kb/s."
 
 msgid "Turtle Mode upload speed. Value is kb/s."
-msgstr "Alternatywne ograniczenie szybkości wysyłania. Wartość w kb/s."
+msgstr "Turtle Mode upload speed. Value is kb/s."
 
 msgid "UL-rate"
-msgstr ""
+msgstr "UL-rate"
 
 msgid "URL"
 msgstr "URL"
 
 msgid "Umask"
-msgstr ""
+msgstr "Umask"
 
 msgid "Unknown"
-msgstr "Nieznany"
+msgstr "Unknown"
 
 msgid "Update blocklists automatically."
-msgstr "Aktualizuj listę blokowanych automatycznie."
+msgstr "Update blocklists automatically."
 
 msgid "Upload"
-msgstr "Wczytaj"
+msgstr "Upload"
 
 msgid "Upload slots"
-msgstr "Sloty wczytywania"
+msgstr "Upload slots"
 
 msgid "Upload torrent"
-msgstr "Wczytaj torrenta"
+msgstr "Upload torrent"
 
 msgid "Uri"
-msgstr ""
+msgstr "Uri"
 
 msgid "Url to access RPC (http://localhost/&lt;URI&gt;/(rpc|web)."
-msgstr ""
+msgstr "Url to access RPC (http://localhost/&lt;URI&gt;/(rpc|web)."
 
 msgid "Use blocklists."
-msgstr "Użyj listy blokowania"
+msgstr "Use blocklists."
 
 msgid "Used for client authentication."
-msgstr ""
+msgstr "Used for client authentication."
 
 msgid "Username"
-msgstr "Nazwa użytkownika"
+msgstr "Username"
 
 msgid "Watch"
-msgstr "Przeglądaj"
+msgstr "Watch"
 
 msgid "Watch a directory for torrent files and add them to transmission"
-msgstr "Przeglądaj katalog w poszukiwaniu torrentów i dodaj je do pobierania"
+msgstr "Watch a directory for torrent files and add them to transmission"
 
 msgid "Wednesday"
-msgstr "Środa"
+msgstr "Wednesday"
 
 msgid "Weekly"
-msgstr "Tygodniowy"
+msgstr "Weekly"
 
 msgid "When enabled, this will toggle the Turtle Mode."
-msgstr "Kiedy włączenie, jest ustawione alternatywne ograniczenie."
+msgstr "When enabled, this will toggle the Turtle Mode."
 
 msgid "default"
-msgstr "domyślny"
+msgstr "default"
 
 msgid "lowcost"
-msgstr ""
+msgstr "lowcost"
 
 msgid "lowdelay"
-msgstr ""
+msgstr "lowdelay"
 
 msgid "reliability"
-msgstr ""
+msgstr "reliability"
 
 msgid "throughput"
-msgstr ""
+msgstr "throughput"
