--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-transmissionbt (0.5.16) stable; urgency=low
+
+  * Enable paging toolbar
+  * Update locales
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 18 Nov 2013 06:51:07 -0500
+
 openmediavault-transmissionbt (0.5.15) stable; urgency=low
 
   * add locales
