--- a/usr/share/openmediavault/locale/de_DE/openmediavault-transmissionbt.po
+++ b/usr/share/openmediavault/locale/de_DE/openmediavault-transmissionbt.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-transmissionbt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-14 11:49-0600\n"
-"PO-Revision-Date: 2013-11-14 17:50+0000\n"
-"Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2013-11-17 19:34+0000\n"
+"Last-Translator: davidh2k <davidh1990@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault-transmissionbt/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -281,7 +281,7 @@ msgid "Micro Transport Protocol (&micro;TP)."
 msgstr "Micro Transport Protocol (&micro;TP)."
 
 msgid "Missing Status: "
-msgstr ""
+msgstr "Fehlender Status:"
 
 msgid "Mode for preallocating files."
 msgstr "Modus um Dateien vorzubelegen."
@@ -350,7 +350,7 @@ msgid "Postfix"
 msgstr "Postfix"
 
 msgid "Postfix partially downloaded files with .part."
-msgstr ""
+msgstr "Postfix teilweise heruntergelandene Dateien mit .part."
 
 msgid "Preallocation"
 msgstr "Vorbelegung"
