--- a/usr/share/openmediavault/locale/pl_PL/openmediavault-transmissionbt.po
+++ b/usr/share/openmediavault/locale/pl_PL/openmediavault-transmissionbt.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-transmissionbt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-14 11:49-0600\n"
-"PO-Revision-Date: 2013-11-14 17:50+0000\n"
-"Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2013-11-16 22:38+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault-transmissionbt/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -76,7 +76,7 @@ msgid "Days"
 msgstr "Dni"
 
 msgid "Debug"
-msgstr ""
+msgstr "Debugowanie"
 
 msgid "Delete"
 msgstr "Usuń"
@@ -88,7 +88,7 @@ msgid "Delete torrent"
 msgstr "Usuń torrenta"
 
 msgid "Delete torrents added from the watch directory."
-msgstr ""
+msgstr "Usuń torrenty z obserwowanego folderu po dodaniu ."
 
 msgid "Deleting selected item(s)"
 msgstr "Usuń zaznaczone"
@@ -97,7 +97,7 @@ msgid "Deleting torrent ..."
 msgstr "Usuwanie torrenta ..."
 
 msgid "Directory"
-msgstr ""
+msgstr "Katalogi"
 
 msgid ""
 "Directory to keep downloads. If incomplete is enabled, only complete "
@@ -129,7 +129,7 @@ msgid "Enable"
 msgstr "Właczone"
 
 msgid "Enable &micro;TP."
-msgstr ""
+msgstr "Włącz &micro;TP."
 
 msgid "Enable DHT."
 msgstr "Włącz DHT"
@@ -156,7 +156,7 @@ msgid "Enable paused torrent scraping."
 msgstr ""
 
 msgid "Enable port forwarding via NAT-PMP or UPnP."
-msgstr ""
+msgstr "Włącz przekierowanie portów za pomocą NAT-PMP lub UPnP."
 
 msgid "Enable upload limit."
 msgstr "Włącz limit wysyłania."
@@ -237,7 +237,7 @@ msgid "Info"
 msgstr "Info"
 
 msgid "Invalid Uri."
-msgstr ""
+msgstr "Niepoprawny URI."
 
 msgid "Jobs"
 msgstr "Zadania"
@@ -281,7 +281,7 @@ msgid "Micro Transport Protocol (&micro;TP)."
 msgstr ""
 
 msgid "Missing Status: "
-msgstr ""
+msgstr "Brak statusu:"
 
 msgid "Mode for preallocating files."
 msgstr ""
@@ -323,7 +323,7 @@ msgid "Peer Ports"
 msgstr "Porty Peer-ów"
 
 msgid "Peer exchange (PEX)"
-msgstr ""
+msgstr "Wzajemne wymiany (PEX)"
 
 msgid "Peer port"
 msgstr "Port Peer'a"
@@ -386,7 +386,7 @@ msgid "Queued to download"
 msgstr "Kolejkuj do pobrania"
 
 msgid "Queued to seed"
-msgstr ""
+msgstr "Kolejkuj do wysyłania"
 
 msgid "Queuing"
 msgstr ""
@@ -395,16 +395,16 @@ msgid "RPC/WebUI Settings"
 msgstr "Ustawienia RPC/WebUI"
 
 msgid "Random Port"
-msgstr ""
+msgstr "Losowy port"
 
 msgid "Random Port on start."
-msgstr ""
+msgstr "Losowy port na starcie."
 
 msgid "Random high"
-msgstr ""
+msgstr "Losowy wysoki"
 
 msgid "Random low"
-msgstr ""
+msgstr "Losowy niski"
 
 msgid "Ratio"
 msgstr "Udział"
@@ -557,7 +557,7 @@ msgid "URL"
 msgstr "URL"
 
 msgid "Umask"
-msgstr ""
+msgstr "Umask"
 
 msgid "Unknown"
 msgstr "Nieznany"
@@ -575,16 +575,16 @@ msgid "Upload torrent"
 msgstr "Wczytaj torrenta"
 
 msgid "Uri"
-msgstr ""
+msgstr "URI"
 
 msgid "Url to access RPC (http://localhost/&lt;URI&gt;/(rpc|web)."
-msgstr ""
+msgstr "Adres do dostępu RPC (http://localhost/&lt;URI&gt;/(rpc|web)."
 
 msgid "Use blocklists."
 msgstr "Użyj listy blokowania"
 
 msgid "Used for client authentication."
-msgstr ""
+msgstr "Używane do uwierzytelniania klienta."
 
 msgid "Username"
 msgstr "Nazwa użytkownika"
