--- a/usr/share/openmediavault/locale/ru_RU/openmediavault-transmissionbt.po
+++ b/usr/share/openmediavault/locale/ru_RU/openmediavault-transmissionbt.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-transmissionbt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-14 11:49-0600\n"
-"PO-Revision-Date: 2013-11-14 17:50+0000\n"
-"Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2013-11-17 07:00+0000\n"
+"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/openmediavault-transmissionbt/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -282,7 +282,7 @@ msgid "Micro Transport Protocol (&micro;TP)."
 msgstr "Micro Transport Protocol (&micro;TP)."
 
 msgid "Missing Status: "
-msgstr ""
+msgstr "Отсутствует статус:"
 
 msgid "Mode for preallocating files."
 msgstr "Режим предварительного выделения места под файлы."
@@ -612,10 +612,10 @@ msgid "lowcost"
 msgstr ""
 
 msgid "lowdelay"
-msgstr ""
+msgstr "малая задержка"
 
 msgid "reliability"
-msgstr ""
+msgstr "надежность"
 
 msgid "throughput"
-msgstr ""
+msgstr "пропускная способность"
