--- a/usr/share/openmediavault/locale/da_DA/openmediavault-transmissionbt.po
+++ b/usr/share/openmediavault/locale/da_DA/openmediavault-transmissionbt.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-transmissionbt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-14 11:49-0600\n"
-"PO-Revision-Date: 2013-11-14 17:50+0000\n"
-"Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2013-11-22 16:08+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault-transmissionbt/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -281,7 +281,7 @@ msgid "Micro Transport Protocol (&micro;TP)."
 msgstr "Micro Transport Protokol (&micro;TP)."
 
 msgid "Missing Status: "
-msgstr ""
+msgstr "Manglende Status:"
 
 msgid "Mode for preallocating files."
 msgstr "Modus til efterallokering filer"
