--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-transmissionbt (0.5.18) stable; urgency=low
+
+  * Update locales
+  * minor fix
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 08 Jan 2014 16:09:07 -0500
+
 openmediavault-transmissionbt (0.5.17) stable; urgency=low
 
   * Update locales
