--- a/usr/share/openmediavault/locale/zh_CN/openmediavault-transmissionbt.po
+++ b/usr/share/openmediavault/locale/zh_CN/openmediavault-transmissionbt.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# dezi121 <by@songming.me>, 2013
+# dezi121 <by@songming.me>, 2013-2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-transmissionbt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-14 11:49-0600\n"
-"PO-Revision-Date: 2013-12-23 02:59+0000\n"
+"PO-Revision-Date: 2014-01-02 05:03+0000\n"
 "Last-Translator: dezi121 <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/openmediavault-transmissionbt/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -43,7 +43,7 @@ msgid "Bindings"
 msgstr "绑定"
 
 msgid "BitTorrent"
-msgstr "BitTorrent"
+msgstr "BitTorrent 下载"
 
 msgid "Blocklists"
 msgstr ""
