--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-transmissionbt (1.3) stable; urgency=medium
+
+  * Stop blocklist update still being run even though the option disabled.
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 08 Mar 2015 17:56:23 +0100
+
 openmediavault-transmissionbt (1.2) stable; urgency=low
 
   * Bug fix
