--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-transmissionbt (1.4) stable; urgency=low
+
+  * Stop blocklist update from sendinga a daily success notification.
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 04 May 2015 23:18:10 -0400
+
 openmediavault-transmissionbt (1.3) stable; urgency=medium
 
   * Stop blocklist update still being run even though the option disabled.
